# cloud-hypervisor-orphan

./: Cargo.toml
block_util/: Cargo.toml
hypervisor/src/: vm.rs
hypervisor/src/kvm/: mod.rs
src/: main.rs
vm-migration/src/: lib.rs
vm-orphan/: Cargo.toml
vm-orphan/src/: lib.rs
vmm/: Cargo.toml
vmm/src/: config.rs  gdb.rs  lib.rs  memory_manager.rs  vm.rs  vm_config.rs
vmm/src/api/: mod.rs
vmm/src/api/http/: http_endpoint.rs  mod.rs
