[package]
name = "vm-orphan"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["rc", "derive"] }
serde_json = "1.0.96"
versionize = "0.1.10"
versionize_derive = "0.1.4"
vm-migration = { path = "../vm-migration" }